# ferries

./: .env  .gitignore  Cargo.toml  README.md  coin_tender.py  coin_tender_test.py
.cargo/: config
migrations/2020-05-25-123157_create_team_members/: down.sql  up.sql
migrations/2020-07-07-141916_add_description_to_sessions/: down.sql  up.sql
migrations/2020-07-07-163440_add_fuzzy_id_to_sessions/: down.sql  up.sql
migrations/2020-07-08-134712_add_fuzzy_id_to_programs/: down.sql  up.sql
migrations/2020-07-10-124553_create_session_notes/: down.sql  up.sql
migrations/2020-07-15-150055_create_session_users/: down.sql  up.sql
migrations/2020-07-16-055118_add_people_to_sessions/: down.sql  up.sql
migrations/2020-07-17-053340_add_member_to_enrollments/: down.sql  up.sql
migrations/2020-07-17-055619_drop_team_from_enrollments/: up.sql
migrations/2020-07-17-142041_add_cancelled_at_to_sessions/: down.sql  up.sql
migrations/2020-07-18-135021_add_session_user_id_to_session_notes/: up.sql
migrations/2020-07-18-141118_add_board_tag_to_session_boards/: down.sql  up.sql
migrations/2020-07-23-105528_add_role_to_users/: down.sql  up.sql
migrations/2020-07-23-165613_add_coach_name_to_programs/: down.sql  up.sql
migrations/2020-07-25-134303_create_coaches/: down.sql  up.sql
migrations/2020-07-25-150340_data_load_for_coaches/: up.sql
migrations/2020-07-25-150552_remap_coach_id_at_programs/: up.sql
migrations/2020-08-07-173431_add_fuzzy_id_to_enrollments/: up.sql
src/: db_manager.rs  emails.rs  file_manager.rs  graphql_schema.rs  main.rs  schema.rs
(+96 files in other folders)
