[package]
name = "ferris"
version = "0.3.0"
authors = ["harinimaniam <harinimaniam2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-multipart = "0.3.0"
actix-files = "0.5.0"
actix-rt = "2.2.0"
futures = "0.3.16"
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "chrono"] }
juniper = "0.14.2"
dotenv = "0.9.0"
env_logger = "0.6"
serde = "1.0.34"
serde_json = "1.0"
chrono = "0.4.11"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sanitize-filename = "0.2.1"
sodiumoxide = "0.2.6"
